--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Green-gay-mobile",
+  "name": "AwesomeProject",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^4.11.0",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.2",
     "react-native-highcharts": "^1.0.2",
