--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "firebase": "^4.11.0",
+    "native-base": "^2.3.10",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.2",
     "react-native-highcharts": "^1.0.2",
+    "react-native-material-design": "^0.3.7",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.5.1"
   },
@@ -25,7 +28,7 @@
   },
   "rnpm": {
     "assets": [
-	    "./assets/fonts/Lato"
+      "./assets/fonts/Lato"
     ]
   }
 }
