--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.2",
     "react-native-highcharts": "^1.0.2",
+    "react-native-material-design": "^0.3.7",
     "react-native-svg": "^6.2.2",
     "react-native-svg-icon": "^0.7.0",
     "react-native-vector-icons": "^4.5.0",
