--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "firebase": "^4.11.0",
     "react": "16.3.0-alpha.1",
     "react-native": "0.54.2",
@@ -16,7 +17,10 @@
     "react-native-svg": "^6.2.2",
     "react-native-svg-icon": "^0.7.0",
     "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^1.5.1"
+    "react-navigation": "^1.5.1",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "socket.io-client": "^2.0.4"
   },
   "devDependencies": {
     "babel-jest": "23.0.0-alpha.0",
